# ADA502-FireGuard1

./: .dockerignore  .gitignore  README.md  Software Architecture.drawio  docker-compose.yaml  docker-compose.yml
.github/workflows/: FRCM-pipeline.yml  Frontend-React.yml  django.yml
BL-app/: Dockerfile  db.sqlite3  manage.py  pyproject.toml
BL-app/BL/: .dockerfile  Dockerfile  asgi.py  compose.yaml  settings.py  urls.py  wsgi.py
DHP-app/: Dockerfile  db.sqlite3  pyproject.toml
DHP-app/DHP/: .dockerfile  Dockerfile  asgi.py  compose.yaml  settings.py  urls.py  wsgi.py
FRCM-app/: Dockerfile  db.sqlite3  manage.py  pyproject.toml
FRCM-app/FRCM/: .dockerfile  Dockerfile  asgi.py  settings.py  urls.py  wsgi.py
FRCM-app/FRCM/src/: main.py
FRCM-app/frcmApp/: admin.py  apps.py  models.py  serializers.py  testititest.py  urls.py  views.py
FRCM-app/frcmApp/data_scheduler/: data_updater.py
FRCM-app/frcmApp/migrations/: 0001_initial.py  0002_alter_weatherstation_options_weatherstation_created_and_more.py  0003_weatherdata.py  (+2 more)
Frontend-app/: Dockerfile  db.sqlite3  pyproject.toml
Frontend-app/API/: models.py  urls.py  views.py
Frontend-app/API/static/API/CSS/: contact.css  maps.css  style.css
Frontend-app/API/static/API/JS/: main.js  maps.js
Frontend-app/API/templates/API/: about.html  contact.html  index.html  malfil.html  map.html
Frontend-app/frontend/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  index.js
reactfrontend/: package-lock.json
(+29 files in other folders)
